# lang_it

./: .gitignore  CMakeLists.txt  README.MD  en_ja.cpp  lang_it  lang_it.cpp  lang_it.h  main.cpp  pt_br.cpp  pt_en.cpp  test.lang  translate_line.cpp
benchmarks/: benchmark.rb  dicionario_pt_usp.utf8.txt  o_pequeno_principe.utf8.txt  result.txt  top_english_words_lower_10000.txt:Zone.Identifier  translate_line.cpp  translated_result.txt
benchmarks/corpora/: NamDU-ARM-8700-Kichik_shahzoda.txt:Zone.Identifier  o_pequeno_principe.txt  the_little_prince.txt
benchmarks/results/: book_result_pt_en.txt  dict_result_pt_en.txt  dict_result_pt_en_all.txt  dict_result_pt_en_positive.txt
desktop/: build.sh  lang_it_ui.cpp  translator
desktop/windows/: build.sh
pairs/: en_ja.cpp  en_pt.cpp  es_fr.cpp  fr_pt.cpp  pt_en.cpp  pt_es.cpp
server/: index.html  server.cpp
server/httplib/: index.html  server  server.cpp
src/: compiler  compiler.cpp  lang_it.h  test.json  test.lang
src/pairs/: aa_bb.cpp  ar_th.cpp  en_ja.cpp  en_pt.cpp  en_sv.cpp  es_en.cpp  es_fr.cpp  fr_pt.cpp  ja_mbl.cpp  ma_zh.cpp  pair.cpp.template  pt_en.cpp  pt_es.cpp  pt_ja.cpp  pt_mbl.cpp  pt_ru.cpp  pt_sv.cpp  sv_en.cpp  zh_en.cpp
test_server/: index.html  server  server.cpp
test_server/esp32/: main.cpp
test_server/esp32-arduino/: README.MD  index.html  lang_it.ino
testing/: test.cpp
wasm/: build.sh  index.html  lang_it.js  lang_it.wasm  lang_it_wasm.cpp
wrappers/java/: CMakeLists.txt  lang_it_jni.cpp
wrappers/ruby/: extconf.rb  lang_it_rb.cpp  main.rb
